feat: actual application start
