# src/main/resources/openapi/consultants.yaml
@@ -23,13 +23,17 @@ paths:
           description: Office Id
           required: false
           schema:
-            type: string
+            type: array
+            items:
+              type: string
         - name: role
           in: query
           description: role name
           required: false
           schema:
-            type: string
+            type: array
+            items:
+              type: string
       responses:
         '200':
           description: Successful operation
@@ -47,6 +51,7 @@ paths:
         - consultants
       summary: Get list of offices
       description: Get list of offices
+      operationId: getOffices
       responses:
         '200':
           description: Successful operation
@@ -54,6 +59,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GetOfficesResponse'
+security:
+  - app_key: []
 components:
   schemas:
     GetConsultantResponse:
@@ -122,7 +129,7 @@ components:
         - name
         - country
   securitySchemes:
-    api_key:
+    app_key:
       type: apiKey
-      name: api_key
+      name: appKey
       in: header
